--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,19 @@ services:
       - 5432:5432
     restart: always
 
+  database-mongo:
+    image: mongo
+    container_name: database-mongo
+    volumes:
+      - ./mongodb:/data/mongodb
+    environment:
+      - MONGO_INITDB_DATABASE=payment
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=root
+    ports:
+      - 27017:27017
+    restart: always
+
   pgadmin4:
     container_name: pgadmin4
     image: dpage/pgadmin4
@@ -27,6 +40,22 @@ services:
       - 5050:80
     links:
       - database-postgres
+
+  mongo-express:
+    image: mongo-express
+    container_name: mongo-express
+    restart: always
+    environment:
+      - ME_CONFIG_MONGODB_SERVER=database-mongo
+      - ME_CONFIG_MONGODB_PORT=27017
+      - ME_CONFIG_MONGODB_ENABLE_ADMIN=true
+      - ME_CONFIG_MONGODB_AUTH_DATABASE=payment
+      - ME_CONFIG_BASICAUTH_USERNAME=root
+      - ME_CONFIG_BASICAUTH_PASSWORD=root
+    ports:
+      - 5051:80
+    links:
+      - database-mongo
 
   authorization-microservice:
     container_name: authorization-microservice
