--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>rental</module>
         <module>common</module>
         <module>jwt-security-utils-starter</module>
+        <module>payment</module>
     </modules>
 
     <properties>
@@ -23,6 +24,7 @@
         <common-hibernate-version>6.1.6.Final</common-hibernate-version>
         <common-mupstruct-version>1.5.2.Final</common-mupstruct-version>
         <common-postgresql-version>42.5.1</common-postgresql-version>
+        <common-mongodb-version>3.12.13</common-mongodb-version>
         <spring-boot-starter-version>3.0.6</spring-boot-starter-version>
         <common-jakarta-servlet-api-varsion>6.0.0</common-jakarta-servlet-api-varsion>
         <common-mokito-version>5.1.1</common-mokito-version>
