--- a/payment/pom.xml
+++ b/payment/pom.xml
@@ -20,6 +20,7 @@
         <module>service</module>
         <module>controller</module>
         <module>run</module>
+        <module>client</module>
     </modules>
     <packaging>pom</packaging>
 
